--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
   		
   			<meta charset="UTF-8" />
-  			<meta http-equiv="refresh" content="3; URL=https://www.fiether.world/" />
+  			<meta http-equiv="refresh" content="3; URL=https://fiether.world/" />
   	</head>
   	
   </html>
